[workspace]
resolver = "2"

members = [
  "api",
  "scaler",
  "agent",
  "thorctl",
  "reactor",
  "event-handler",
  "thoradm",
  "search-streamer",
  "operator",
  "thorium-derive",
  "cart-rs"
]

[workspace.package]
version = "1.1.1"
authors = ["mcarson <mcarson@sandia.gov>", "gmbaker <gmbaker@sandia.gov>", "jehamza <jehamza@sandia.gov>"]
edition = "2024"

[profile.profiling]
inherits = "release"
debug = true
