[package]
name = "thorium-event-handler"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thorium = {version= "1.0.0", path="../api", default-features = false, features = ["client", "trace"] }
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.3", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = { version = "0.1" }
uuid = { version = "1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.28" }
futures-locks = { version = "0.7.1" }
