[package]
name = "thorium-operator"
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium = { version= "1.1.2", path="../api", default-features = false, features = ["scylla-utils", "client", "k8s"] }
reqwest = { version = "0.12", features = ["json"]}
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.45", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
kube = { version = "1.1", features = ["rustls-tls", "derive", "config", "client", "runtime"] }
kube-derive = { version = "1.1" }
rustls = "0.23.27"
k8s-openapi = { version = "0.25", default-features = false, features = ["v1_30"] }
schemars = { version = "0.8.0" }
bytestring = { version = "1.4" }
rand = { version = "0.9" }
base64 = { version = "0.22" }
chrono = { version = "0.4" }
openssl = "*"
aws-types = { version = "1.3" }
aws-sdk-s3 = { version = "1.90", features = ["rt-tokio", "behavior-version-latest"] }
aws-credential-types = { version = "1.2" }
generic-array = { version = "0.14" }
