[package]
name = "thorium-reactor"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
# include kvm by default
default = []

# support kvm based builds
kvm = ["virt"]

# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
tokio = { version = "1.3", features = ["full"] }
clap = { version = "4", features = ["derive"] }
gethostname = "0.4"
tracing = { version = "0.1" }
opentelemetry = { version = "0.19", features = ["rt-tokio", "trace"] }
chrono = { version = "0.4" }
sysinfo = "0.28"
async-trait = "0.1"
serde = "1"
serde_json = "1"
serde_yaml = "0.9"
openssl = "*"
rustix = { version = "0.37", features = ["process"] }
semver = { version = "1", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
cfg-if = "1.0.0"


# enable cgroups support for linux
[target.'cfg(target_os = "linux")'.dependencies]
thorium = { version= "1.0.0", path="../api", default-features = false, features = ["client", "cgroups", "crossbeam-err", "trace", "rustix"]}
cgroups-rs = "0.3"
# enable support for kvm based jobs
virt = { version = "0.3", optional = true }

# disable cgroups support when on windows or macos
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
thorium = { version= "1.0.0", path="../api", default-features = false, features = ["client", "crossbeam-err", "trace"]}
