[package]
name = "thorium-scaler"
resolver = "2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
# include test utilities for the Thorium scaler
test-utilities = []

# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium = {version= "1.0.0", path="../api", default-features = false, features = ["client", "k8s", "trace"] }
reqwest = { version = "0.11", features = ["json"]}
tokio = { version = "1.3", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4", features = ["derive"] }
itertools = "0.10.0"
rand = "0.8.4"
kube = { version = "0.92", features = ["rustls-tls"] }
config = { version = "0.14", features = ["yaml"] }
k8s-openapi = { version = "0.22", default-features = false, features = ["v1_24"] }
chrono = { version = "0.4", features = ["serde"] }
async-recursion = "1"
regex = "1"
dirs = "5"
base64 = "0.21"
rayon = "1.5"
bincode = "1.3.3"
uuid = { version = "1", features = ["serde", "v4"] }
openssl = "*"
tracing = { version = "0.1" }
rustls = "0.23"

[dev-dependencies]
thorium-scaler = { path = ".", features = ["test-utilities"]}
thorium = {version= "1.0.0", path="../api", default-features = false, features = ["client", "k8s", "trace", "test-utilities"] }
serial_test = "2"
