[package]
name = "thorium-scaler"
resolver = "2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

[features]
# include test utilities for the Thorium scaler
test-utilities = []

# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]

[dependencies]
thorium = {version= "1.1.1", path="../api", default-features = false, features = ["client", "k8s", "trace"] }
reqwest = { version = "0.12", features = ["json"]}
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
clap = { version = "4", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.1"
kube = { version = "1.1", features = ["rustls-tls"] }
config = { version = "0.15", features = ["yaml"] }
k8s-openapi = { version = "0.25", default-features = false, features = ["v1_30"] }
chrono = { version = "0.4", features = ["serde"] }
async-recursion = "1"
regex = "1"
dirs = "6"
base64 = "0.22"
rayon = "1.10"
bincode = "2.0.1"
uuid = { version = "1", features = ["serde", "v4"] }
openssl = "*"
tracing = { version = "0.1" }
rustls = "0.23"
hashbrown = "0.15"

[dev-dependencies]
thorium-scaler = { path = ".", features = ["test-utilities"]}
thorium = {version= "1.1.1", path="../api", default-features = false, features = ["client", "k8s", "trace", "test-utilities"] }
serial_test = "3"
