[package]
name = "thorium-search-streamer"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.12", features = ["full"] }
thorium = { version = "1.0.0", path = "../api", default-features=false, features = ["client", "kanal-err", "trace"]}
chrono = { version = "~0.4.27", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
kanal = "0.1.0-pre8"
async-trait = "0.1"
url = "2"
elasticsearch = "8.5.0-alpha.1"
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
tracing = { version = "0.1" }
opentelemetry = { version = "0.19", features = ["rt-tokio", "trace"] }
openssl = "*"

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]
