[package]
name = "thorium-search-streamer"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1.45", features = ["full"] }
thorium = { version = "1.1.2", path = "../api", default-features=false, features = ["client", "kanal-err", "trace", "scylla-utils"]}
chrono = { version = "=0.4.38", features = ["serde"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
kanal = "0.1.1"
async-trait = "0.1"
url = "2"
elasticsearch = "9.0.0-alpha.1"
uuid = { version = "1", features = ["serde", "v4"] }
futures = "0.3"
tracing = { version = "0.1" }
opentelemetry = { version = "0.30", features = ["trace"] }
openssl = "*"
scylla = { version = "1.2" }
itertools = "0.14"
redis = { version = "0.23", default-features = false, features = ["tokio-comp"] }

[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]
