[package]
name = "thoradm"
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]


[dependencies]
thorium = { version= "1.0.0", path="../api", default-features = false, features = ["scylla-utils", "rkyv-support", "client"] }
tokio = { version = "1.26", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
scylla = { version = "0.15", features = ["chrono-04"] }
futures = { version = "0.3.28" }
async-trait = "0.1"
itertools = { version = "0.10" }
chrono = { version = "0.4", features = ["serde", "rkyv", "rkyv-validation"] }
uuid = { version = "1", features = ["serde", "v4"] }
ahash = "0.8"
rkyv = { version = "=0.7.43", features = ["arbitrary_enum_discriminant", "uuid", "validation"]}
bytes = "1.4"
kanal = "0.1.0-pre8"
indicatif = { version = "0.17", features = ["tokio"] }
num-format = "0.4"
bytecheck = "=0.6.11"
clap = { version = "4", features = ["derive", "wrap_help", "string"] }
config = { version = "0.14", features = ["yaml"] }
dialoguer = "0.10"
sha2 = "0.10"
data-encoding = "2.4"
openssl = "*"
serde = "1.0"
serde_json = "1.0"
aws-types = "1.1"
aws-sdk-s3 = { version = "1.14", features = ["rt-tokio", "behavior-version-latest"] }
aws-smithy-http = "0.60"
aws-credential-types = "1.1"
async-walkdir = "0.2"
dirs = "5"
strum = { version = "0.26", features = ["derive"] }
serde_yaml = "0.9"
bb8-redis = "0.13"
redis = { version = "0.23", default-features = false, features = ["tokio-comp", "script"] }
