[package]
name = "thorctl"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive", "wrap_help", "string"] }
tokio = { version = "1.45", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
config = { version = "0.15", features = ["yaml"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serde_derive = "1.0"
thorium = { version = "1.1.0", path = "../api", default-features=false, features = ["client", "kanal-err", "dialoguer-err"]}
colored = "3"
owo-colors = "4"
http = "1.3"
uuid = { version = "1", features = ["serde", "v4"] }
walkdir = "2.5"
async-walkdir = "2"
futures = "0.3"
generic-array = "0.14"
lazy_static = "1.5"
sha2 = "0.10"
data-encoding = "2.9"
cart-rs = { version = "*", path = "../cart-rs"}
regex = "1.11"
git2 = "0.20"
gix = "0.72"
itertools = "0.14"
chrono = { version = "0.4", features = ["serde"] }
url = "2"
elasticsearch = "9.0.0-alpha.1"
async-trait = "0.1"
openssl = "*"
rpassword = "7.4"
indicatif = "0.17"
rand = "0.9.1"
kanal = "0.1.1"
semver = { version = "1", features = ["serde"] }
dialoguer = "0.11"
dirs = "6"
cfg-if = "1"


[features]
# Force openssl-sys to staticly link in the openssl library. Necessary when
# cross compiling to x86_64-unknown-linux-musl.
vendored-openssl = ["openssl/vendored"]
