[package]
name = "thorium-derive"
resolver = "2"
version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
name = "thorium_derive"
path = "src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "2.0.72", features = ["full"] }
quote = "1.0.37"
proc-macro2 = "1.0.92"
darling = "0.20.10"
